--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-  - '6'
-  - '7'
-  - '8'
-cache: yarn
+  - '10'
+  - '12'
+os:
+  - linux
+  - osx
+  - windows
 script:
   - npm test
