--- a/package.json
+++ b/package.json
@@ -20,17 +20,22 @@
     "prepush": "npm test"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "commander": "^3.0.2",
-    "debug": "^4.1.1",
-    "shelljs": "^0.8.3"
+    "chalk": "^4.1.0",
+    "commander": "^7.1.0",
+    "debug": "^4.3.1",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "handlebars": "^4.5.1",
-    "husky": "^3.0.9",
-    "mocha": "^6.2.2",
-    "rimraf": "^3.0.0",
-    "tmp": "^0.1.0"
+    "chai": "^4.3.4",
+    "handlebars": "^4.7.7",
+    "husky": "^5.1.3",
+    "mocha": "^8.3.2",
+    "rimraf": "^3.0.2",
+    "tmp": "^0.2.1"
+  },
+  "mocha": {
+    "ui": "bdd",
+    "recursive": true,
+    "reporter": "spec"
   }
 }
